Fixed backface-visibility for Firefox in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,7 @@ input[type='text']:disabled {
 .front {
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
+  transform: rotateY(0deg);
   z-index: 1;
 }
 
